# wwrr

./: .gitignore  Cargo.toml  pkg-debug.sh  pkg-nightly.sh  pkg.sh  rust-toolchain.toml
.cargo/: config.toml
lib/api/: Cargo.toml
lib/api/macro-wasmer-universal-test/src/: lib.rs
lib/api/src/: engine.rs  errors.rs  exports.rs  extern_ref.rs  function_env.rs  imports.rs  instance.rs  lib.rs  module.rs  module_info_polyfill.rs  store.rs  vm.rs
lib/api/src/js/: as_js.rs  engine.rs  errors.rs  instance.rs  mod.rs  module.rs  store.rs  trap.rs  typed_function.rs  vm.rs
lib/api/tests/: externals.rs  function_env.rs  import_function.rs  instance.rs  memory.rs  module.rs
lib/bindgen-cli/: Cargo.toml
lib/bindgen-cli/src/: main.rs
lib/config/: Cargo.toml
lib/config/src/: lib.rs
lib/derive/: Cargo.toml
lib/derive/tests/: compiletest.rs
lib/journal/: Cargo.toml
lib/js/: Cargo.toml
lib/js/src/: fs.rs  js_runtime.rs  lib.rs  options.rs  runtime.rs  utils.rs
lib/js/src/tasks/: post_message_payload.rs  scheduler.rs  task_wasm.rs  thread_pool.rs
lib/types/: Cargo.toml  README.md
lib/types/src/: lib.rs  module.rs  trapcode.rs  units.rs
lib/types/src/compilation/: function.rs  section.rs
lib/types/src/entity/: boxed_slice.rs  primary_map.rs  secondary_map.rs
lib/utils/: Cargo.toml
lib/utils/src/: lib.rs
lib/virtual-fs/: Cargo.toml
lib/virtual-fs/src/: lib.rs  limiter.rs  pipe.rs  tmp_fs.rs  union_fs.rs  webc_volume_fs.rs
lib/virtual-fs/src/mem_fs/: file.rs  filesystem.rs  offloaded_file.rs
lib/virtual-io/: Cargo.toml
lib/virtual-mio/: Cargo.toml
lib/virtual-mio/src/: interest.rs  lib.rs  sleep.rs  waker.rs
lib/virtual-net/: Cargo.toml
lib/virtual-net/src/: lib.rs  tests.rs
lib/wai-bindgen-wasmer/: Cargo.toml
lib/wasi-types/: Cargo.toml
lib/wasix/: Cargo.toml
lib/wasix-types/: Cargo.toml
lib/wasix-types/src/: lib.rs
lib/wasix-types/src/wasi/: bindings.rs  bindings_manual.rs  wasix_manual.rs
lib/wasix-types/src/wasix/: mod.rs
lib/wasix/src/: lib.rs
lib/wasix/src/bin_factory/: binary_package.rs  mod.rs
lib/wasix/src/fs/: fd.rs  mod.rs
lib/wasix/src/http/: mod.rs  web_http_client.rs
lib/wasix/src/journal/: mod.rs
lib/wasix/src/net/: mod.rs  socket.rs
lib/wasix/src/os/: mod.rs
lib/wasix/src/os/console/: mod.rs
lib/wasix/src/os/task/: control_plane.rs  process.rs  task_join_handle.rs  thread.rs
lib/wasix/src/runners/: mod.rs  wasi.rs  wasi_common.rs
lib/wasix/src/runtime/: mod.rs  task_manager.rs
lib/wasix/src/runtime/module_cache/: mod.rs  thread_local.rs
lib/wasix/src/runtime/package_loader/: builtin_loader.rs  load_package_tree.rs  mod.rs
lib/wasix/src/runtime/resolver/: in_memory_source.rs  mod.rs  utils.rs  web_source.rs
lib/wasix/src/runtime/task_manager/: mod.rs
lib/wasix/src/state/: builder.rs  env.rs  func_env.rs  handles.rs  mod.rs  run.rs  types.rs
lib/wasix/src/state/handles/: mod.rs  thread_local.rs
lib/wasix/src/syscalls/: mod.rs  wasm.rs
lib/wasix/src/syscalls/journal/: maybe_snapshot.rs  maybe_snapshot_many.rs  maybe_snapshot_once.rs  mod.rs
lib/wasix/src/syscalls/legacy/: snapshot0.rs
lib/wasix/src/syscalls/wasi/: args_get.rs  args_sizes_get.rs  clock_res_get.rs  clock_time_get.rs  clock_time_set.rs  environ_get.rs  environ_sizes_get.rs  fd_advise.rs  fd_allocate.rs  fd_close.rs  fd_datasync.rs  fd_dup.rs  fd_event.rs  fd_fdstat_get.rs  fd_fdstat_set_flags.rs  fd_fdstat_set_rights.rs  fd_filestat_get.rs  fd_filestat_set_size.rs  fd_filestat_set_times.rs  fd_prestat_dir_name.rs  fd_prestat_get.rs  fd_read.rs  fd_readdir.rs  fd_renumber.rs  fd_seek.rs  fd_sync.rs  fd_tell.rs  fd_write.rs  mod.rs  path_create_directory.rs  path_filestat_get.rs  path_filestat_set_times.rs  path_link.rs  path_open.rs  path_readlink.rs  path_remove_directory.rs  path_rename.rs  path_symlink.rs  path_unlink_file.rs  poll_oneoff.rs  (+2 more)
lib/wasix/src/syscalls/wasix/: callback_signal.rs  chdir.rs  epoll_create.rs  epoll_ctl.rs  epoll_wait.rs  fd_pipe.rs  futex_wait.rs  futex_wake.rs  futex_wake_all.rs  getcwd.rs  mod.rs  port_addr_add.rs  port_addr_clear.rs  port_addr_list.rs  port_addr_remove.rs  port_bridge.rs  port_dhcp_acquire.rs  port_gateway_set.rs  port_mac.rs  port_route_add.rs  port_route_clear.rs  port_route_list.rs  port_route_remove.rs  port_unbridge.rs  proc_join.rs  resolve.rs  sched_yield.rs  sock_accept.rs  sock_bind.rs  sock_connect.rs  sock_join_multicast_v4.rs  sock_join_multicast_v6.rs  sock_leave_multicast_v4.rs  sock_leave_multicast_v6.rs  sock_listen.rs  sock_open.rs  sock_recv.rs  sock_recv_from.rs  sock_send.rs  sock_send_file.rs  (+13 more)
lib/wasix/src/utils/: mod.rs
lib/wasix/tests/: runners.rs  stdio.rs
lib/wwrr/: Cargo.toml
lib/wwrr/src/: fs.rs  instance.rs  js_runtime.rs  lib.rs  logging.rs  options.rs  run.rs  runtime.rs  streams.rs  utils.rs
lib/wwrr/src/tasks/: interop.rs  mod.rs  post_message_payload.rs  scheduler.rs  scheduler_message.rs  task_wasm.rs  thread_pool.rs  thread_pool_worker.rs  worker.js  worker.rs  worker_handle.rs  worker_message.rs
