[workspace]
members = [
    "lib/api",
    "lib/api/macro-wasmer-universal-test",
    "lib/config",
    "lib/derive",
    "lib/journal",
    "lib/types",
    "lib/virtual-fs",
    "lib/virtual-io",
    "lib/virtual-net",
    "lib/wai-bindgen-wasmer",
    "lib/wasi-types",
    "lib/wasix",
    "lib/wasm-interface",
]
resolver = "2"

[workspace.package]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
homepage = "https://wasmer.io/"
license = "MIT"
repository = "https://github.com/wasmerio/wasmer"
rust-version = "1.74"
version = "4.3.7"

[workspace.dependencies]
shared-buffer = "0.1.4"
wasmparser = { version = "0.121.0", default-features = false }
enumset = "1.1.0"
rkyv = { version = "0.7.40", features = ["indexmap", "validation", "strict"] }
memoffset = "0.9.0"
indexmap = "2"
serde_yaml = "0.9.34"
pretty_assertions = "1.4.0"
base64 = "0.22.0"
dashmap = "6.0.1"
tokio = { version = "1.39.0", default-features = false}
webc = { version = "6.0.1", default-features = false, features = ["package"] }
http = "1.0.0"
hyper = "1"
