[workspace]
members = [
    "lib/api",
    "lib/derive",
    "lib/js",
    "lib/types",
    "lib/virtual-fs",
    "lib/virtual-mio",
    "lib/virtual-net",
    "lib/wasix-types",
    "lib/wasix",
]
resolver = "2"

[workspace.package]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
homepage = "https://wasmer.io/"
license = "MIT"
repository = "https://github.com/wasmerio/wasmer"
rust-version = "1.74"
version = "4.3.7"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.0"
bincode = "1"
bitflags = "2.6"
bytecheck = "0.6"
bytes = "1.8"
cfg-if = "1.0"
chrono = { version = "0.4.31", default-features = false }
compiletest_rs = "0.11"
console_error_panic_hook = "0.1"
cooked-waker = "5"
dashmap = "6.0.1"
derivative = "2"
enum-iterator = "0.7"
enumset = "1.1.0"
futures = "0.3"
getrandom = "0.2"
heapless = "0.8"
hex = "0.4"
http = "1.0.0"
hyper = "1"
indexmap = "2"
instant = "0.1"
js-sys = "0.3.64"
lazy_static = "1.4"
memoffset = "0.9.0"
more-asserts = "0.3"
num_enum = "0.7"
once_cell = "1.17"
pin-project-lite = "0.2.9"
pretty_assertions = "1.4.0"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
replace_with = "0.1.7"
rkyv = { version = "0.7.40", features = ["indexmap", "validation", "strict"] }
rusty_pool = "0.7.0"
semver = "1.0"
serde = "1.0.215"
serde_bytes = "0.11"
serde_yaml = "0.9.34"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
shared-buffer = "0.1.4"
slab = "0.4"
syn = "1.0.72"
target-lexicon = { version = "0.12.2", default-features = false }
thiserror = "1"
tokio = { version = "1.39.0", default-features = false}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
tracing-wasm = "0.2"
typetag = "0.1"
wai-bindgen-rust = { version = "0.2.1", default-features = false }
waker-fn = "1.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasmparser = { version = "0.121", default-features = false }
web-sys = "0.3"
webc = { version = "6.0.1", default-features = false, features = ["package"] }
xxhash-rust = "0.8.8"
wat = "=1.0.71"
rustc-demangle = "0.1"

[profile.release]
lto = true
opt-level = 'z'
