[workspace]
members = [
    "lib/api",
    "lib/bindgen-cli",
    "lib/derive",
    "lib/wwrr",
    "lib/types",
    "lib/utils",
    "lib/virtual-fs",
    "lib/virtual-mio",
    "lib/virtual-net",
    "lib/wasix-types",
    "lib/wasix",
]
resolver = "2"

[workspace.package]
authors = [
    "Sebastian Urban <surban@surban.net>",
    "Wasmer Engineering Team <engineering@wasmer.io>",
]
homepage = ""
repository = "https://github.com/rust-wasi-web/wwrr"
edition = "2021"
license = "MIT"
rust-version = "1.74"
version = "0.1.0"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.0"
bincode = "1"
bitflags = "2.6"
bytecheck = "0.6"
bytes = "1.8"
cfg-if = "1.0"
chrono = { version = "0.4.31", default-features = false }
compiletest_rs = "0.11"
console_error_panic_hook = "0.1"
cooked-waker = "5"
dashmap = "6.0.1"
derivative = "2"
docopt = "1"
enum-iterator = "0.7"
enumset = "1.1.0"
futures = "0.3"
getrandom = "0.2"
heapless = "0.8"
hex = "0.4"
http = "1.0.0"
hyper = "1"
indexmap = "2"
instant = "0.1"
js-sys = "0.3.64"
lazy_static = "1.4"
memoffset = "0.9.0"
more-asserts = "0.3"
num_enum = "0.7"
once_cell = "1.17"
pin-project-lite = "0.2.9"
pretty_assertions = "1.4.0"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
replace_with = "0.1.7"
rkyv = { version = "0.7.40", features = ["indexmap", "validation", "strict"] }
rusty_pool = "0.7.0"
semver = "1.0"
serde = "1.0.215"
serde_bytes = "0.11"
serde_yaml = "0.9.34"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
shared-buffer = "0.1.4"
slab = "0.4"
syn = "1.0.72"
target-lexicon = { version = "0.12.2", default-features = false }
thiserror = "2"
tokio = { version = "1.39.0", default-features = false }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
tracing-wasm = "0.2"
wai-bindgen-rust = { version = "0.2.1", default-features = false }
waker-fn = "1.1"
wasm-bindgen = "0.2"
wasm-bindgen-cli-support = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-shared = "0.2"
wasm-bindgen-test = "0.3"
wasmparser = { version = "0.121", default-features = false }
web-sys = "0.3"
webc = { version = "6.0.1", default-features = false, features = ["package"] }
xxhash-rust = "0.8.8"
wat = "=1.0.71"
rustc-demangle = "0.1"

[profile.release]
lto = true
opt-level = 'z'


[patches.crates-io]
wasm-bindgen = { path = "../wasm-bindgen" }
wasm-bindgen-cli-support = { path = "../wasm-bindgen/crates/cli-support" }
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures" }
wasm-bindgen-shared = { path = "../wasm-bindgen/crates/shared" }
wasm-bindgen-test = { path = "../wasm-bindgen/crates/test" }
