[package]
name = "wasmer"
description = "High-performance WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "runtime", "vm"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]
wasmer-types = { path = "../types", default-features = false, features = [
  "std",
  "enable-serde",
] }
wasmer-derive = { path = "../derive" }

bytes = "1"
cfg-if = "1.0"
derivative = { version = "^2" }
indexmap = { version = "1.6" }
js-sys = "0.3.51"
more-asserts = "0.2"
rustc-demangle = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.4.5" }
thiserror = "1.0"
tracing = { version = "0.1" }
wasm-bindgen = "0.2.74"
wasmparser = { workspace = true, default-features = false }

wat = { version = "=1.0.71", optional = true }


[dev-dependencies]
wat = "1.0"
anyhow = "1.0"
wasm-bindgen-test = "0.3.0"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

