[package]
name = "wasmer"
description = "High-performance WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "runtime", "vm"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-types = { path = "../types", default-features = false, features = ["std", "enable-serde"] }
wasmer-derive = { path = "../derive" }

bytes = { workspace = true }
cfg-if = { workspace = true }
derivative = { workspace = true }
indexmap = "1.6"
js-sys = { workspace = true }
more-asserts = { workspace = true }
rustc-demangle = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasmparser = { workspace = true, default-features = false }
wat = { workspace = true, optional = true }

[dev-dependencies]
wat = { workspace = true }
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
