[package]
name = "wasmer"
description = "High-performance WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "runtime", "vm"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
utils = { path = "../utils" }
wasmer-types = { path = "../types", default-features = false, features = ["std", "enable-serde"] }
wasmer-derive = { path = "../derive" }

bytes = { workspace = true }
cfg-if = { workspace = true }
derivative = { workspace = true }
indexmap = { workspace = true }
js-sys = { workspace = true }
more-asserts = { workspace = true }
rustc-demangle = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasmparser = { workspace = true, default-features = false }
wat = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true }
wat = { workspace = true }
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
