[package]
name = "wasmer-derive"
description = "Wasmer derive macros"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.72", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
compiletest_rs = "0.11"
