[package]
name = "wasmer-derive"
description = "Wasmer derive macros"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
compiletest_rs = { workspace = true }
