[package]
name = "wasmer-js"
version = "0.0.0"
authors = ["Syrus Akbary <syrus@wasmer.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
virtual-fs = { path = "../virtual-fs", default-features = false }
virtual-net = { path = "../virtual-net", default-features = false, features = ["remote"] }
wasmer = { path = "../api" }
wasmer-types = { path = "../types" }
wasmer-wasix = { path = "../wasix" }

lazy_static = "1.5"
anyhow = "1"
async-trait = "0.1"
bincode = "1"
bytes = "1"
console_error_panic_hook = { version = "0.1" }
derivative = { version = "2" }
futures = "0.3"
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3"
once_cell = "1"
reqwest = { version = "0.12.7", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10.8"
tempfile = "3.10.1"
tokio = { version = "1", features = ["sync"], default-features = false }
toml = "0.8.14"
tracing = { version = "0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
wasm-bindgen = { version = "0.2.92" }
wasm-bindgen-futures = "0.4.40"
wasm-bindgen-test = "0.3.45"
webc = "6.1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "console",
    "DedicatedWorkerGlobalScope",
    "DomException",
    "ErrorEvent",
    "File",
    "FileReader",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemHandle",
    "Headers",
    "MessageEvent",
    "Navigator",
    "ProgressEvent",
    "QueuingStrategy",
    "ReadableByteStreamController",
    "ReadableStream",
    "ReadableStreamDefaultController",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "StorageManager",
    "Url",
    "WebSocket",
    "Window",
    "Worker",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "WorkerOptions",
    "WorkerType",
    "WritableStream",
    "WritableStreamDefaultController",
    "WritableStreamDefaultWriter",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"



[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-threads", "--enable-bulk-memory", "-Oz"]
