[package]
name = "wasmer-types"
description = "Wasmer Common Types"
categories = ["wasm", "no-std", "data-structures"]
keywords = ["wasm", "webassembly", "types"]
license = "MIT OR Apache-2.0 WITH LLVM-exception"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytecheck = { workspace = true }
enum-iterator = { workspace = true }
enumset = { workspace = true }
hex = { workspace = true }
indexmap = "1.6"
more-asserts = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"], optional = true }
serde_bytes = { workspace = true, optional = true }
sha2 = { workspace = true }
target-lexicon = { workspace = true, default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh64"] }

[features]
default = ["std"]
std = []
core = []
enable-serde = ["serde", "serde/std", "serde_bytes", "indexmap/serde-1"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
