[package]
name = "virtual-fs"
version = "0.16.0"
description = "Wasmer Virtual FileSystem"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
pin-project-lite = { workspace = true }
replace_with = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
shared-buffer = { workspace = true }
slab = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync", "macros"] }
tracing = { workspace = true }
typetag = { workspace = true, optional = true }
webc = { workspace = true, optional = true, features = ["v1"] }

[dev-dependencies]
tracing-test = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt"] }

[features]
enable-serde = ["typetag", "serde"]
no-time = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
