[package]
name = "virtual-mio"
version = "0.3.1"
description = "Wasmer Virtual IO Engine powered by mio"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derivative = { version = "2" }
futures = { version = "0.3" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

