[package]
name = "virtual-net"
version = "0.8.0"
description = "Wasmer Virtual Networking"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
hyper = { version = "1", optional = true }
rkyv = { workspace = true, optional = true }

thiserror = "1"
bytes = "1.1"
async-trait = { version = "^0.1" }
tracing = "0.1"
tokio = { workspace = true, default-features = false, features = ["io-util"] }
libc = { version = "^0.2", default-features = false, optional = true }
derivative = { version = "^2" }
virtual-mio  = { path = "../virtual-io", version = "0.3.0", default-features = false, features = ["js"] }
bincode = { version = "1.3" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
pin-project-lite = "0.2.9"
futures-util = { version = "0.3" }
anyhow = "1.0"
tokio-serde = { version = "0.8", features = [ "bincode" ], optional = true }
tokio-util = { version = "0.7.8", features = ["codec"], optional = true }
hyper-tungstenite = { version = "0.13", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
bytecheck = { version = "0.6.8", optional = true }
hyper-util = { version = "0.1.5", features = ["tokio"], optional = true }

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = ["proto-ipv4", "std", "alloc"]

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = [ "macros"] }
tracing-test = { version = "0.2" }
serial_test = "2.0.0"

[features]
#default = [ "remote", "json", "messagepack", "cbor", "hyper", "tokio-tungstenite" ]
json = [ "tokio-serde/json" ]
messagepack = [ "tokio-serde/messagepack" ]
cbor = [ "tokio-serde/cbor" ]
hyper = [ "hyper-tungstenite", "hyper-util", "dep:hyper" ]
tokio = [ ]
tokio-tungstenite = [ "dep:tokio-tungstenite" ]
rkyv = [ "dep:rkyv", "dep:bytecheck" ]

[package.metadata.docs.rs]
features = ["remote"]
rustc-args = ["--cfg", "docsrs"]
