[package]
name = "virtual-net"
version = "0.8.0"
description = "Wasmer Virtual Networking"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
virtual-mio = { path = "../virtual-mio" }

thiserror = "1"
bytes = "1.1"
async-trait = "0.1"
derivative = "2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
pin-project-lite = "0.2.9"
futures-util = "0.3"

rkyv = { workspace = true, optional = true }
bytecheck = { version = "0.6.8", optional = true }
tokio = { workspace = true, features = ["io-util"], optional = true }

[features]
tokio = ["dep:tokio"]
rkyv = ["dep:rkyv", "dep:bytecheck"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
