[package]
name = "virtual-net"
version = "0.8.0"
description = "Wasmer Virtual Networking"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
virtual-mio = { path = "../virtual-mio" }

async-trait = { workspace = true }
bytecheck = { workspace = true, optional = true }
bytes = { workspace = true}
derivative = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
rkyv = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"], optional = true }

[features]
tokio = ["dep:tokio"]
rkyv = ["dep:rkyv", "dep:bytecheck"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
