[package]
name = "wasmer-wasix-types"
version = "0.27.0"
description = "WASI and WASIX types for Wasmer WebAssembly runtime"
categories = ["wasm", "os"]
keywords = ["wasm", "webassembly", "wasi", "sandbox", "ABI"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
wasmer = { default-features = false, path = "../api" }
wasmer-types = { path = "../types" }
wasmer-derive = { path = "../derive" }

wai-bindgen-rust = { version = "0.2.1", default-features = false, features = ["macros"] }
serde = { version = "1.0", features = ["derive"], optional = true }
num_enum = "0.5.7"
bitflags = "1.3.0"
cfg-if = "1.0.0"
tracing = { version = "0.1.37" }

[features]
enable-serde = ["serde", "wasmer-types/serde"]

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
