[package]
name = "wasmer-wasix-types"
version = "0.27.0"
description = "WASI and WASIX types for Wasmer WebAssembly runtime"
categories = ["wasm", "os"]
keywords = ["wasm", "webassembly", "wasi", "sandbox", "ABI"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wasmer = { default-features = false, path = "../api" }
wasmer-types = { path = "../types" }
wasmer-derive = { path = "../derive" }

bitflags = { workspace = true }
cfg-if = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
tracing = { workspace = true }
wai-bindgen-rust = { workspace = true, default-features = false, features = ["macros"] }

[features]
enable-serde = ["serde", "wasmer-types/serde"]

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
