[package]
name = "wasmer-wasix"
version = "0.27.0"
description = "WASI and WASIX implementation library for Wasmer WebAssembly runtime"
categories = ["wasm", "os"]
keywords = ["wasm", "webassembly", "wasi", "sandbox", "ABI"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
virtual-fs = { path = "../virtual-fs", features = ["no-time"] }
virtual-mio = { path = "../virtual-mio" }
virtual-net = { path = "../virtual-net", features = ["rkyv"] }
wasmer = { path = "../api", features = ["wat"] }
wasmer-types = { path = "../types", default-features = false }
wasmer-wasix-types = { path = "../wasix-types", features = ["enable-serde"] }

rkyv.workspace = true
shared-buffer.workspace = true

chrono = { version = "0.4.31", default-features = false, features = ["wasmbind", "std", "clock"] }

js-sys = "0.3.64"
web-sys = { version = "0.3.72", features = [
    "Request",
    "RequestInit",
    "Window",
    "WorkerGlobalScope",
    "RequestMode",
    "Response",
    "Headers",
] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

xxhash-rust = { version = "0.8.8", features = ["xxh64"] }
rusty_pool = { version = "0.7.0", optional = true }
cfg-if = "1.0"
thiserror = "1"
tracing = { version = "0.1.37" }
getrandom = { version = "0.2", features= ["js"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3" }
derivative = { version = "^2" }
bytes = "1"
anyhow = { version = "1.0.66" }
lazy_static = "1.4"
sha2 = { version = "0.10" }
waker-fn = { version = "1.1" }
cooked-waker = "^5"
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt",
], default-features = false }
futures = { version = "0.3" }
async-trait = { version = "^0.1" }
serde_derive = { version = "^1" }
hex = { version = "^0.4" }
heapless = "0.7.16"
once_cell = "1.17.0"
semver = "1.0.17"
num_enum = "0.5.7"
bytecheck = "0.6.8"
ahash = "0.8.11"
pin-utils = "0.1.0"

typetag = { version = "0.1", optional = true }

[dev-dependencies]
wasmer = { path = "../api", default-features = false, features = ["wat"] }
tokio = { workspace = true, features = [ "sync", "macros", "rt" ], default-features = false }
wasm-bindgen-test = "0.3.0"
tracing-wasm = "0.2"

[features]
enable-serde = [
    "typetag",
    "virtual-fs/enable-serde",
    "wasmer-wasix-types/enable-serde",
]

logging = ["tracing/log"]
extra-logging = []
disable-all-logging = ["tracing/release_max_level_off", "tracing/max_level_off"]


[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
