[package]
name = "wasmer-wasix"
version = "0.27.0"
description = "WASI and WASIX implementation library for Wasmer WebAssembly runtime"
categories = ["wasm", "os"]
keywords = ["wasm", "webassembly", "wasi", "sandbox", "ABI"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
utils = { path = "../utils" }
virtual-fs = { path = "../virtual-fs", features = ["no-time"] }
virtual-mio = { path = "../virtual-mio" }
virtual-net = { path = "../virtual-net", features = ["rkyv"] }
wasmer = { path = "../api" }
wasmer-types = { path = "../types", default-features = false }
wasmer-wasix-types = { path = "../wasix-types", features = ["enable-serde"] }

ahash = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true }
bytecheck = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["wasmbind", "std", "clock"] }
cooked-waker = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
heapless = { workspace = true }
hex = { workspace = true }
js-sys = { workspace = true }
lazy_static = { workspace = true }
num_enum = { workspace = true }
once_cell = { workspace = true }
rkyv = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
shared-buffer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing = { workspace = true }
waker-fn = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Request", "RequestInit", "Window", "WorkerGlobalScope", "RequestMode", "Response", "Headers"] }
xxhash-rust = { workspace = true, features = ["xxh64"] }

[dev-dependencies]
wasmer = { path = "../api", features = ["wat"] }
tracing-wasm = { workspace = true }
wasm-bindgen-test = { workspace = true }

[features]
disable-all-logging = ["tracing/release_max_level_off", "tracing/max_level_off"]
enable-serde = ["virtual-fs/enable-serde", "wasmer-wasix-types/enable-serde"]
extra-logging = []
logging = ["tracing/log"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
